add basic design system and populate weather overview info

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -1,6 +1,10 @@
+@import './headers.css';
+
+@import "tailwindcss/base";
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;400&display=swap');
 
 body {
-    @apply min-h-screen m-0;
+    @apply min-h-screen m-0 font-nunito;
 }
